# bevy_capture_media

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  README.md  rustfmt.toml
assets/: Tree.gltf
examples/: basic_orthographic.rs  basic_perspective.rs  basic_screenshots.rs  multiple_cameras.rs
formats/: gif.rs
src/: data.rs  image_utils.rs  lib.rs  management.rs  render.rs  web_utils.rs
src/formats/: gif.rs  mod.rs  png.rs
