[package]
name = "bevy_giffer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["png"]
png = ["dep:image"]
gif = ["dep:image", "dep:gif", "dep:color_quant", "dep:fnv"]
parallel = ["dep:rayon"]

[dependencies]
bevy_render = "0.8"
#bevy = { version = "0.8", default-features = false, features = ["render", "bevy_winit", "png"] }
log = "0.4"
wgpu = "0.13"
futures-lite = "1.12"

# Dpendencies for all image types
image = { version = "0.24", optional = true }

# Dpendencies for GIFs
gif = { version = "0.11", optional = true }
color_quant = { version = "1.1.0", optional = true }
rayon = { version = "1.5", optional = true }
fnv = { version = "1" , optional = true}