[package]
name = "bevy_capture_media"
version = "0.0.2"
edition = "2021"
authors = ["Louis Capitanchik <louis@microhacks.co.uk"]
license = "Apache-2.0"
license-file = "LICENSE"
repository = "https://github.com/Commander-lol/bevy_capture_media"
description = "Event based screenshots & recording for Bevy Engine"

[features]
default = ["png"]
png = ["dep:image"]
gif = ["dep:image", "dep:gif", "dep:color_quant", "dep:fnv"]
parallel = ["dep:rayon"]

[dependencies]
bevy_render = "0.8"
bevy_app = "0.8"
bevy_tasks = "0.8"
bevy_ecs = "0.8"
bevy_asset = "0.8"
bevy_transform = "0.8"
bevy_core_pipeline = "0.8"
bevy_time = "0.8"

#bevy = { version = "0.8", default-features = false, features = ["render", "bevy_winit", "png"] }
log = "0.4"
wgpu = "0.13"
futures-lite = "1.12"

# Dependencies for all image types
image = { version = "0.24", optional = true }

# Dependencies for GIFs
gif = { version = "0.11", optional = true }
color_quant = { version = "1.1.0", optional = true }
rayon = { version = "1.5", optional = true }
fnv = { version = "1" , optional = true}
base64 = "0.13.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = { version = "0.3.58" }
wasm-bindgen = "0.2.81"
wasm-bindgen-futures = "0.4.31"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.58"
features = [
	"Window",
	"Document",
	"Blob",
	"BlobPropertyBag",
	"Element",
	"HtmlElement",
	"FileReader",
	"HtmlCollection",
]
